jena-shex/src/test/files/spec/negativeSyntax/PN_LOCAL-with-UCHAR.1.shex
# UCHAR.1 is not in PN_LOCAL
# source: turtle-syntax-bad-pname-03.ttl
PREFIX ex: <http://a.example/>

<http://a.example/IssueShape> {
   ex:p\u0031 .
}
